# speclib

./: CMakeLists.txt  LICENSE  README.md
doc/: Doxyfile  report.tex
include/speclib/: LinkedListPool.h  ReductionVar.h  SpecAtomic.h  SpecConsecVector.h  SpecReal.h  SpecRealComm.h  SpecRealInd.h  SpecVector.h  ThreadPool.h  common_speclib.h  speclib.h  speclib_std.h
tests/: CMakeLists.txt
tests/basic_tests/: CMakeLists.txt  atomicreal_test.cpp  atomicreal_test_rev.cpp  despl_vec_test.cpp  despl_vec_test_rev.cpp  max_int_test.cpp  max_int_test_rev.cpp  max_noisy_vec_test.cpp  max_noisy_vec_test_rev.cpp  max_vec_test.cpp  max_vec_test_rev.cpp  maxmin_vec_test.cpp  maxmin_vec_test_rev.cpp  reduction_test.cpp  reduction_test_rev.cpp  specvec_test.cpp  specvec_test_rev.cpp
tests/benchmarks/: B-synthetic-fast_v1.cpp  CMakeLists.txt  DEF-2D-Hull-10M.cpp  R-test_reduction.cpp  R-test_reduction_atomic.cpp  R-test_reduction_atomic_slow.cpp  R-test_reduction_slow.cpp
tests/benchmarks/sequential/: B-synthetic-fast_v1_seq.cpp  CMakeLists.txt  DEF-2D-Hull-10M_seq.cpp  R-test_reduction_seq.cpp
tests/common_files/: common_cgetopt.cpp  common_test.cpp
